# ensina-multimidia

./: 01-signals.ipynb  README.md  _config.yml  _toc.yml  myst.yml  pyproject.toml  refs.bib
.trunk/: trunk.yaml
pages/part01/: 00-intro.md
pages/part02/chapter01/: 00-signals.ipynb  01-fourier.md  03-fourier-series-math.ipynb
scripts/: utils.py
