[project]
name = "ensinamultimidia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.22"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter-book>=2.0.0a0",
    "jupyterlab>=4.4.2",
    "jupyterlab-myst>=2.4.2",
    "numpy>=2.0.2",
    "plotly>=6.1.1",
    "scipy>=1.13.1",
    "simpleaudio>=1.0.4",
]
